contact name change

--- a/updated/index.html
+++ b/updated/index.html
@@ -35,7 +35,7 @@
       <li><a href="clients_bootstrap.html">Clients</a></li>
       <li><a href="Training_bootstrap.html">Training </a></li>
      <!--  <li><a href="careers.html">Careers</a></li> -->
-      <li><a class="contact-button" href="contact_bootstrap.html" style="margin-left: 10px;">Say Hello!</a></li>
+      <li><a class="contact-button" href="contact_bootstrap.html" style="margin-left: 10px;">Contact</a></li>
     </ul>
   </header>
 </div>
