--- a/updated/contact_bootstrap.html
+++ b/updated/contact_bootstrap.html
@@ -133,7 +133,13 @@
 
 
 <style type="text/css">
+  
 
+  .item-content
+  {
+      margin-bottom: 3rem;
+      margin-top:3rem;
+  }
   
   .write-content
   {
