--- a/updated/work_bootstrap.html
+++ b/updated/work_bootstrap.html
@@ -248,10 +248,9 @@
 
   <script type="text/javascript">
 
-  $(document).ready(function()
+  $(window).ready(function()
    {  
-
-
+        
       var flick = $('.carousel').flickity({
         groupCells:2,
         fade:true,
@@ -271,7 +270,7 @@
 
       if ($(window).width() < 767)
     { 
-       $('.carousel').flickity('destroy');
+       $('.carousel').flickity('destroy')
        var flick1 = $('.carousel').flickity({
         groupCells:false,
         fade:true,
