--- a/updated/work_bootstrap.html
+++ b/updated/work_bootstrap.html
@@ -248,9 +248,9 @@
 
   <script type="text/javascript">
 
-  $(window).ready(function()
-   {  
-        
+  $( window ).on( "load", function() {
+    
+
       var flick = $('.carousel').flickity({
         groupCells:2,
         fade:true,
