--- a/updated/clients_bootstrap.html
+++ b/updated/clients_bootstrap.html
@@ -24,6 +24,39 @@
   Aerospace, AR/VR labs, AR in Hotels, VR in Advertising, VR in Healthcare, VR showroom.">
     
 
+<style type="text/css">
+  
+  .container-main
+  {
+    z-index: -1;
+    margin-top: 8vw;
+    font-family: fut;
+  }
+
+  .img-top
+  {
+    margin-top: 100px;
+  }
+
+  @media screen and (max-width: 768px)
+  {
+      .container-main
+      {
+        z-index: -1;
+        margin-top: 5vw;
+        font-family: fut;
+      }
+      .pad-img
+      {
+        padding: 5%;
+      }
+      .img-top
+      {
+         margin-top: 50px;
+      }
+  }  
+</style>
+
 </head>
 
  
@@ -46,22 +79,24 @@
         <div class="row justify-content-center">
         <h6 style="font-size: .9em;">GLOBAL CLIENTS</h6>
        </div>
-       <div style="margin-top: 100px;"></div>
+       <div class="img-top"></div>
        <div class="row justify-content-center">
-        <img class="img-fluid" src="assets/client1.png"/>
+        <img class="img-fluid pad-img" src="assets/client1.png"/>
       </div>
      </div>
-        <div class="col-md-5">
+        <div class="col-md-5 mx-4">
           <div class="row justify-content-center">
           <h6 style="font-size: .9em;">TECHNOLOGY PARTNER</h6>
          </div>
-         <div style="margin-top: 100px;"></div>
+         <div class="img-top"></div>
          <div class="row justify-content-center">
-          <img class="img-fluid" src="assets/client2.png"/>
+          <img class="img-fluid pad-img" src="assets/client2.png"/>
         </div>
       </div>
     </div>
 </div>
+  
+  <div class="my-5"></div>
 
 </body>
 
