--- a/updated/contact_bootstrap.html
+++ b/updated/contact_bootstrap.html
@@ -114,11 +114,11 @@ font-size: 0.6rem;border-radius: 20px;background-color: #F9535E;box-shadow: 0px 
       </p>
       <br>
       <h5 class="fheading" style="font-size: 1.05em;">KEEP IN TOUCH</h5>
-      <p class="my-4 content-inside">Mail id <br>
-        <b>contact@swevens.co</b>
+      <p class="mt-4 content-inside">Mail id</p>
+        <p><b style="color: #666666;">contact@swevens.co</b>
       </p>
-      <p class="my-4 content-inside">Call <br>
-        <b>+919444092103</b>
+      <p class="mt-4 content-inside">Call <br></p>
+       <p> <b style="color: #666666;">+919444092103</b>
       </p>
       
       <div style="display: flex;opacity: .5;" class="footer-content">
@@ -347,7 +347,11 @@ padding: 0px !important;
     margin-bottom: 1.5rem;
   }
 } 
-
+   .footer-content
+  {
+    margin-top: 2.5rem;
+    margin-bottom: 1.5rem;
+  }
 
 </style>
 
