navbar blur added

--- a/updated/index.html
+++ b/updated/index.html
@@ -42,11 +42,12 @@
 
 <body id="changeopacity">
 
-    <img style="z-index: -1;" class="background" id="i-img" src="assets/defence.png" />
-    <article style="z-index: -1;" class="banner">We Craft AR & VR<br /> Solutions for <em id="i-text">defence</em> </article>
-    <aside style="z-index: -1;" class="left-aside header-color" style="color: #AAA9A9;">&nbspIMMERSIVE STORYTELLERS</aside>
-    <aside style="z-index: -1;margin-top: 15px;" class="right-aside header-color" style="color: #AAA9A9;">&nbspPUSHING THE LIMITS OF TECHNOLOGY INNOVATION</aside>
-    <footer class="footer" style="z-index: -1;">
+
+    <img style="z-index: -1;" class="background blur-content" id="i-img" src="assets/defence.png" />
+    <article style="z-index: -1;" class="banner blur-content">We Craft AR & VR<br /> Solutions for <em id="i-text">defence</em> </article>
+    <aside style="z-index: -1;" class="left-aside header-color blur-content" style="color: #AAA9A9;">&nbspIMMERSIVE STORYTELLERS</aside>
+    <aside style="z-index: -1;margin-top: 15px;" class="right-aside header-color blur-content" style="color: #AAA9A9;">&nbspPUSHING THE LIMITS OF TECHNOLOGY INNOVATION</aside>
+    <footer class="footer blur-content" style="z-index: -1;">
     	    <div class="title-mob">
     			<h3>
     				<!-- <a href="mailto:contact@swevens.co">contact@swevens.co</a> -->
