--- a/updated/work_bootstrap.html
+++ b/updated/work_bootstrap.html
@@ -150,22 +150,7 @@
       
       </div>
 
-
-
-     <!--  <div class="carousal-left container-fluid" style="position: relative;margin-top: 3vh;">
-        <div class="carousel">
-          <div class="carousel-cell"><img src="assets/2.png" style="width: 60vw;"></div>
-          <div class="carousel-cell"> <img src="assets/1.png" style="width:30vw;"></div>
-            <div class="carousel-cell"><img src="assets/3.png" style="width: 40vw;"></div>
-          <div class="carousel-cell"><img src="assets/4.png" style="width:58vw;"></div>
-            <div class="carousel-cell"><a href="usdz/redvelvet.usdz" rel="ar"><img src="assets/5.png" style="width: 60vw;"></a></div>
-          <div class="carousel-cell"><a href="usdz/tansmallsofa.usdz" rel="ar"><img src="assets/6.png" style="width:30vw;"></a></div>  
-          <div class="carousel-cell"><img src="assets/7.jpg" style="width: 60vw;"></div>
-          <div class="carousel-cell"> <img src="assets/8.jpg" style="width:30vw;"></div>    
-        </div>
-      </div> -->
-
-
+<div class="blur-content"> 
        <div class="carousal-left container-fluid" style="position: relative;margin-top: 3vh;">
         <div class="carousel">
           <div class="carousel-cell"><img src="assets/2.png" ></div>
@@ -241,7 +226,7 @@
     </div>
  
 
-
+</div>
 
 
   <script src="design/main.js"></script>
