--- a/updated/Training_bootstrap.html
+++ b/updated/Training_bootstrap.html
@@ -224,6 +224,7 @@ function checkcourse(a)
 
   <div id="header-file" style="height: 100px;"></div>
    
+   <div class="blur-content">
   <div class="container" style="margin-top: 5vw;">
 
     <h1 class="theading page-head">AR VR Hands on Design Training</h1>
@@ -258,6 +259,7 @@ function checkcourse(a)
         <span class="ml-3"><a href="https://medium.com/swevens" target="_blank"><i class="fa fa-medium"></i></a></span>
         <span class="ml-3"> <a href="https://in.linkedin.com/company/swevens" target="_blank"><i class="fa fa-linkedin-square"></i></a></span>
       </div>
+</div>
 </div>
 <!-- <script type="text/javascript">
 
