--- a/updated/clients_bootstrap.html
+++ b/updated/clients_bootstrap.html
@@ -73,7 +73,7 @@
  <div id="header-file" style="height: 100px;z-index: 1;"></div>
 
 
- <div class="container-fluid contents" style="z-index: -1;margin-top: 8vw;font-family: fut;" >
+ <div class="container-fluid contents blur-content" style="z-index: -1;margin-top: 8vw;font-family: fut;" >
      <div class="row">  
       <div class="col-md-5 offset-md-1" style="margin-bottom: 100px;">
         <div class="row justify-content-center">
