--- a/updated/contact_bootstrap.html
+++ b/updated/contact_bootstrap.html
@@ -37,6 +37,8 @@
  <div id="header-file" style="height: 80px;z-index: 1;"></div>
 
 
+
+<div class="blur-content">
  <div class="container-fluid contents" style="z-index: -1;margin-top: 6vw;" >
   <div class="row justify-content-center d-flex">
      <div class="col-md-6"> 
@@ -130,6 +132,8 @@ font-size: 0.6rem;border-radius: 20px;background-color: #F9535E;box-shadow: 0px 
   </div>
 </div>
 
+
+</div>
 </body>
 
 
