--- a/updated/clients_bootstrap.html
+++ b/updated/clients_bootstrap.html
@@ -14,6 +14,7 @@
     <script type="text/javascript" src="js/resources/jquery.min.js"></script>
     <script type="text/javascript" src="js/resources/bootstrap.min.js"></script>
 
+      <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
 
     <script src="design/main.js"></script>
     <link rel="stylesheet" href="design/navbar.css">
@@ -95,8 +96,15 @@
       </div>
     </div>
 </div>
+
   
-  <div style="margin-top: 6rem;"></div>
+
+
+   <div  class="justify-content-center manual-footer mob-content blur-content my-5"  style="margin-top: 3rem;display: none;">
+        <span class="ml-0"><a href="https://www.facebook.com/swevensindia" target="_blank"><i class="fa fa-facebook-square"></i></a></span>
+        <span class="ml-3"><a href="https://medium.com/swevens" target="_blank"><i class="fa fa-medium"></i></a></span>
+        <span class="ml-3"> <a href="https://in.linkedin.com/company/swevens" target="_blank"><i class="fa fa-linkedin-square"></i></a></span>
+      </div>
 
 
 
