--- a/updated/course2.html
+++ b/updated/course2.html
@@ -108,8 +108,8 @@
                   <br/>
                   <br/>
 
-                  <div class="row d-flex justify-content-center" style="margin-bottom: 5rem;">
-                  <button class="btn btn-danger theading">Register</button>
+                  <div class="row d-flex align-btn" style="margin-bottom: 2rem;">
+                  <button class="btn btn-danger theading Register-btn">Register</button>
                   </div>
                   <br/>
                   <br/>
