--- a/updated/header.html
+++ b/updated/header.html
@@ -9,9 +9,19 @@
       <li><a href="clients_bootstrap.html">Clients</a></li>
       <li><a href="Training_bootstrap.html">Training </a></li>
      <!--  <li><a href="careers.html">Careers</a></li> -->
-      <li><a class="contact-button" href="contact_bootstrap.html" style="margin-left: 10px;">Contact</a></li>
+      <li><a class="contact-button" href="contact_bootstrap.html" style="margin-left: 10px;">Contact</a></li>    
+
     </ul>
+    
+      <div id="nav-footer" style="display: none;position: fixed;width: 100%;" class="justify-content-center">
+            <a href="https://www.facebook.com/swevensindia" target="_blank"><i class="fa fa-facebook-square"></i></a>
+            <a href="https://medium.com/swevens" target="_blank"><i class="fa fa-medium"></i></a>
+            <a href="https://in.linkedin.com/company/swevens" target="_blank"><i class="fa fa-linkedin-square"></i></a>
+    </div>
   </header>
+
+  
+
 
 
 </html>
