--- a/updated/index.html
+++ b/updated/index.html
@@ -47,6 +47,7 @@
     <article style="z-index: -1;" class="banner blur-content">We Craft AR & VR<br /> Solutions for <em id="i-text">defence</em> </article>
     <aside style="z-index: -1;" class="left-aside header-color blur-content" style="color: #AAA9A9;">&nbspIMMERSIVE STORYTELLERS</aside>
     <aside style="z-index: -1;margin-top: 15px;" class="right-aside header-color blur-content" style="color: #AAA9A9;">&nbspPUSHING THE LIMITS OF TECHNOLOGY INNOVATION</aside>
+
     <footer class="footer blur-content" style="z-index: -1;">
     	    <div class="title-mob">
     			<h3>
@@ -58,18 +59,16 @@
             <a href="https://www.facebook.com/swevensindia" target="_blank"><i class="fa fa-facebook-square"></i></a>
             <a href="https://medium.com/swevens" target="_blank"><i class="fa fa-medium"></i></a>
             <a href="https://in.linkedin.com/company/swevens" target="_blank"><i class="fa fa-linkedin-square"></i></a>
-           <!--  <a href="https://www.instagram.com/swevenshq/" target="_blank">Instagram</a> -->
-            
-
-
-            <!-- <div style="display: flex;">
-            <span ><a href="www.google.com"><i class="fa fa-facebook-square"></i></a></span>
-            <span ><a href="www.google.com"><i class="fa fa-medium"></i></a></span>
-            <span ><a href="www.google.com"><i class="fa fa-linkedin-square"></i></a></span>
-            </div> -->
+        
 
         </nav>
     </footer>
+
+     <div id="nav-footer" style="display: none;">
+            <a href="https://www.facebook.com/swevensindia" target="_blank"><i class="fa fa-facebook-square"></i></a>
+            <a href="https://medium.com/swevens" target="_blank"><i class="fa fa-medium"></i></a>
+            <a href="https://in.linkedin.com/company/swevens" target="_blank"><i class="fa fa-linkedin-square"></i></a>
+    </div>
 
 
 
