--- a/updated/Training_bootstrap.html
+++ b/updated/Training_bootstrap.html
@@ -181,6 +181,7 @@
     margin-bottom: 3rem;
     font-family: seui-b;
     margin-left: -20px;
+    justify-content: center;
 
   }
   .mob-content
@@ -224,6 +225,10 @@
   .btn-block
   {
     width:100px !important;
+  }
+  .mob-width
+  {
+    width: 290px;
   }
 }
 
@@ -282,13 +287,13 @@ function checkcourse(a)
     <br>
 
 <div class="row text-center certify-container">
-    <div class="col-md-3" onclick="checkcourse(1)">
+    <div class="col-md-3 mob-width" onclick="checkcourse(1)">
     <h4 class="head-certify item-certify">Certified UX & UI <br> AR & VR Designer</h4>
     </div> 
-    <div class="col-md-3"  onclick="checkcourse(2);">
+    <div class="col-md-3 mob-width"  onclick="checkcourse(2);">
      <h4 class="cert1 head-certify item-certify">Certified UX <br> AR & VR Expert</h4>
     </div>
-    <div class="col-md-3"  onclick="checkcourse(3);">
+    <div class="col-md-3 mob-width"  onclick="checkcourse(3);">
      <h4 class="cert2 head-certify item-certify">Certified UI<br> AR & VR Expert</h4>
     </div>
 </div>
