--- a/updated/clients_bootstrap.html
+++ b/updated/clients_bootstrap.html
@@ -64,12 +64,6 @@
 
 <body class="bg-img">
 
-  <!--  <img class="background" id="i-img" src="assets/defence.png" /> 
- -->
-   
-
-  <!--Background Image -->
-    <!-- <div class="bg-img"> -->
 
  <div id="header-file" style="height: 100px;z-index: 1;"></div>
 
@@ -100,7 +94,7 @@
   
 
 
-   <div  class="justify-content-center manual-footer mob-content blur-content my-5"  style="margin-top: 3rem;display: none;">
+   <div  class="justify-content-center manual-footer mob-content blur-content"  style="margin-top: 5rem;margin-bottom:5rem;display: none;">
         <span class="ml-0"><a href="https://www.facebook.com/swevensindia" target="_blank"><i class="fa fa-facebook-square"></i></a></span>
         <span class="ml-3"><a href="https://medium.com/swevens" target="_blank"><i class="fa fa-medium"></i></a></span>
         <span class="ml-3"> <a href="https://in.linkedin.com/company/swevens" target="_blank"><i class="fa fa-linkedin-square"></i></a></span>
