--- a/updated/work_bootstrap.html
+++ b/updated/work_bootstrap.html
@@ -210,8 +210,8 @@
 
 
   <!--- mobile content -->
-  <div class="container-fluid bottom-footer mt-3 mob-content" >
-    <div class="row justify-contents-center">
+  <div class="container-fluid bottom-footer mt-3 mob-content" style="height: auto;">
+    <div class="row justify-contents-center" style="width: 100%;">
       <div class="col-7">
         <h4 class="c-bottom-heading"><span class="bottom-heading">IMMERSIVE EDUCATION</span></h4>
       </div>
@@ -235,7 +235,7 @@
 
     </div> 
 
-        <div  class="justify-content-center manual-footer" style="margin-top: 2rem;">
+        <div  class="justify-content-center manual-footer my-5">
         <span class="ml-0"><a href="https://www.facebook.com/swevensindia" target="_blank"><i class="fa fa-facebook-square"></i></a></span>
         <span class="ml-3"><a href="https://medium.com/swevens" target="_blank"><i class="fa fa-medium"></i></a></span>
         <span class="ml-3"> <a href="https://in.linkedin.com/company/swevens" target="_blank"><i class="fa fa-linkedin-square"></i></a></span>
