working on responsive

--- a/updated/Training_bootstrap.html
+++ b/updated/Training_bootstrap.html
@@ -13,7 +13,9 @@
       <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
 
     <script src="design/main.js"></script>
+
     <link rel="stylesheet" href="design/navbar.css">
+    <link rel="stylesheet" href="design/new-main.css">
 
     <title>Swevens - Augmented Reality & Virtual Reality company in Chennai,India</title>
     <meta name="description" content="Swevens Immersive Studio is the leading Augmented Reality (AR), Virtual Reality (VR), 
@@ -21,7 +23,10 @@
     Augmented Reality Live Assistance, Defence Solutions in Virtual Reality, AR/VR in Medical Industry, Automotive, 
     Aerospace, AR/VR labs, AR in Hotels, VR in Advertising, VR in Healthcare, VR showroom.">
 
-  <style type="text/css">
+<style type="text/css">
+
+
+<style type="text/css">
   
 
     .item-certify:hover
@@ -35,6 +40,7 @@
     {
       margin-top: 1rem;
     }
+<style type="text/css">
   
     .round
     {
@@ -232,6 +238,7 @@
   }
 }
 
+  
 body
 {
   font-family: seui;
