--- a/updated/contact_bootstrap.html
+++ b/updated/contact_bootstrap.html
@@ -18,6 +18,7 @@
 
     <script src="design/main.js"></script>
     <link rel="stylesheet" href="design/navbar.css">
+    <link rel="stylesheet" href="design/new-main.css">
 
   <meta name="description" content="Swevens Immersive Studio is the leading Augmented Reality (AR), Virtual Reality (VR), 
   Mixed Reality(MR) company in Chennai,India. We offer solutions in Virtual Reality(VR) training Simulations, 
@@ -141,8 +142,7 @@
 
 <style type="text/css">
   
-
-  .item-content
+.item-content
   {
       margin-bottom: 3rem;
       margin-top:3rem;
@@ -205,6 +205,7 @@
   font-size: 0.86rem !important;
   font-family: seui;
 }
+ 
 a {
         text-decoration: none;
         color: #666;
@@ -222,6 +223,16 @@ label
   opacity: 1 !important;
 }
 
+
+.border-line:hover
+{
+  border-left:solid 2px #F9535E;
+}
+
+.border-line:focus
+{
+  border-left:solid 2px #F9535E;
+}
 
 
   /************newly addded********/
@@ -308,15 +319,6 @@ padding: 0px !important;
   opacity: 1;
 }
 
-.border-line:hover
-{
-  border-left:solid 2px #F9535E;
-}
-
-.border-line:focus
-{
-  border-left:solid 2px #F9535E;
-}
 
 @media screen and (min-width:1920px)
 {
