--- a/updated/clients_bootstrap.html
+++ b/updated/clients_bootstrap.html
@@ -18,45 +18,13 @@
 
     <script src="design/main.js"></script>
     <link rel="stylesheet" href="design/navbar.css">
+    <link rel="stylesheet" href="design/new-main.css">
 
   <meta name="description" content="Swevens Immersive Studio is the leading Augmented Reality (AR), Virtual Reality (VR), 
   Mixed Reality(MR) company in Chennai,India. We offer solutions in Virtual Reality(VR) training Simulations, 
   Augmented Reality Live Assistance, Defence Solutions in Virtual Reality, AR/VR in Medical Industry, Automotive, 
   Aerospace, AR/VR labs, AR in Hotels, VR in Advertising, VR in Healthcare, VR showroom.">
     
-
-<style type="text/css">
-  
-  .container-main
-  {
-    z-index: -1;
-    margin-top: 8vw;
-    font-family: fut;
-  }
-
-  .img-top
-  {
-    margin-top: 100px;
-  }
-
-  @media screen and (max-width: 768px)
-  {
-      .container-main
-      {
-        z-index: -1;
-        margin-top: 5vw;
-        font-family: fut;
-      }
-      .pad-img
-      {
-        padding: 5%;
-      }
-      .img-top
-      {
-         margin-top: 50px;
-      }
-  }  
-</style>
 
 </head>
 
