beta version updated

--- a/beta/work_bootstrap.html
+++ b/beta/work_bootstrap.html
@@ -80,7 +80,7 @@
     	</div>
       
       <div class="col-md-3 mx-3" style="padding: 0px 38px;">
-      	<span class="c-bottom-center-heading"> <span class="bottom-center-heading">Future of education is in AR<br> Out of the books, into the interactive 3D space.</span> </span>
+      	<span class="c-bottom-center-heading"> <span class="bottom-center-heading">Future of education is in AR:</span> </span>
       </div>
       <div class="offset-md-2 col-md-1 " style="max-width: 5%;">
       	<h5 class="c-page-no" style="font-size: 1.15em;"><span class="page-no">01</span><span style="font-weight: lighter;opacity: 0.6;">/04</span></h5>
@@ -117,7 +117,7 @@
         </div>
     </div>
       <div class="col-12">
-        <span class="c-bottom-center-heading"> <span class="bottom-center-heading">Future of education is in AR<br> Out of the box into the space</span> </span>
+        <span class="c-bottom-center-heading"> <span class="bottom-center-heading">Future of education is in AR:</span> </span>
       </div>
     </div>
 
@@ -207,7 +207,7 @@
             case 0: 
             case 1:  
                      $(".bottom-heading").html("IMMERSIVE<br>EDUCATION");
-                     $(".bottom-center-heading").html("Future of education is in AR <br> Out of the box into the space");   
+                     $(".bottom-center-heading").html("Future of education is in AR:");   
                     break;
             case 2:
             case 3:   
@@ -222,7 +222,7 @@
             case 6:
             case 7:   
                      $(".bottom-heading").html("OIL RIG TRAINING <br> IN VIRTUAL REALITY");
-                     $(".bottom-center-heading").html("Creating a virtual replica of a rig is a lot cheaper than constantly carrying out on-site trainings. Since VR technology has matured to the point where the virtual experience is as good as the real one, students can walk away with a good grasp on their skills at a fraction of the cost and in risk-free environment."); 
+                     $(".bottom-center-heading").html(""); 
                     break;
           
           }
