--- a/beta/clients_bootstrap.html
+++ b/beta/clients_bootstrap.html
@@ -63,7 +63,7 @@
 
  <div class="container-fluid contents blur-content client-pc" style="z-index: -1;margin-top: 6vw;font-family: fut;" >
      <div class="row">  
-      <div class="col-md-5 offset-md-1" style="margin-bottom: 100px;">
+      <div class="col-lg-7" style="margin-bottom: 100px;">
         <div class="row justify-content-center">
         <h6 style="font-size: .9em;">GLOBAL CLIENTS</h6>
        </div>
@@ -72,7 +72,7 @@
         <img class="img-fluid " src="assets/pc_client1.png"/>
       </div>
      </div>
-        <div class="col-md-5 mx-4">
+        <div class="col-lg-4" style="margin-bottom: 100px;">
           <div class="row justify-content-center">
           <h6 style="font-size: .9em;">TECHNOLOGY PARTNER</h6>
          </div>
